# delta-rs

./: Cargo.toml
crates/aws/: Cargo.toml
crates/aws/src/: constants.rs  lib.rs  logstore.rs  storage.rs
crates/aws/src/logstore/: dynamodb_logstore.rs
crates/core/: Cargo.toml
crates/core/src/delta_datafusion/: expr.rs  mod.rs  physical.rs
crates/core/src/delta_datafusion/cdf/: scan.rs
crates/core/src/delta_datafusion/find_files/: physical.rs
crates/core/src/kernel/arrow/: mod.rs
crates/core/src/kernel/expressions/: scalars.rs
crates/core/src/kernel/models/: actions.rs
crates/core/src/kernel/snapshot/: log_data.rs  log_segment.rs  mod.rs  parse.rs  replay.rs
crates/core/src/operations/: cdc.rs  write.rs
crates/core/src/operations/merge/: barrier.rs
crates/core/src/operations/transaction/: conflict_checker.rs  mod.rs
crates/core/src/protocol/: checkpoints.rs
crates/core/src/protocol/parquet_read/: mod.rs
crates/core/src/storage/: mod.rs
crates/core/src/table/: state.rs  state_arrow.rs
crates/core/tests/: checkpoint_writer.rs
