[workspace]
members = ["delta-inspect", "rust", "python"]
exclude = ["proofs"]
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
# arrow
arrow = { path = "../arrow-rs/arrow" }
arrow-array = { path="../arrow-rs/arrow-array" }
arrow-buffer = { path="../arrow-rs/arrow-buffer" }
arrow-cast = { path="../arrow-rs/arrow-cast" }
arrow-ord = { path="../arrow-rs/arrow-ord" }
arrow-row = { path="../arrow-rs/arrow-row" }
arrow-schema = { path="../arrow-rs/arrow-schema" }
arrow-select = { path="../arrow-rs/arrow-select" }
parquet = { path="../arrow-rs/parquet" }

# datafusion
datafusion = { path="../arrow-datafusion/datafusion/core" }
datafusion-expr = { path="../arrow-datafusion/datafusion/expr" }
datafusion-common = { path="../arrow-datafusion/datafusion/common" }
datafusion-proto = { path="../arrow-datafusion/datafusion/proto" }
datafusion-sql = { path="../arrow-datafusion/datafusion/sql" }
datafusion-physical-expr = { path="../arrow-datafusion/datafusion/physical-expr" }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# "stdlib"
bytes = { version = "1" }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
regex = { version = "1" }
thiserror = { version = "1" }
url = { version = "2" }
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }
