[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.81"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
#delta_kernel = { git="https://github.com/Nekit2217/delta-kernel-rs", branch="bm-main", features = ["default-engine"] }
delta_kernel = { path="../delta-kernel-rs/kernel", features = ["default-engine"] }

# arrow
arrow = { path="../arrow-rs/arrow" }
arrow-arith = { path="../arrow-rs/arrow-arith" }
arrow-array = { path="../arrow-rs/arrow-array", features = ["chrono-tz"] }
arrow-buffer = { path="../arrow-rs/arrow-buffer" }
arrow-cast = { path="../arrow-rs/arrow-cast" }
arrow-ipc = { path="../arrow-rs/arrow-ipc" }
arrow-json = { path="../arrow-rs/arrow-json" }
arrow-ord = { path="../arrow-rs/arrow-ord" }
arrow-row = { path="../arrow-rs/arrow-row" }
arrow-schema = { path="../arrow-rs/arrow-schema" }
arrow-select = { path="../arrow-rs/arrow-select" }
object_store = { path="../arrow-rs/object_store"}
parquet = { path="../arrow-rs/parquet" }
#arrow = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-arith = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-array = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master", features = ["chrono-tz"] }
#arrow-buffer = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-cast = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-ipc = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-json = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-ord = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-row = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-schema = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow-select = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#object_store = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#parquet = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }

# datafusion
datafusion = { path="../arrow-datafusion/datafusion/core" }
datafusion-expr = { path="../arrow-datafusion/datafusion/expr" }
datafusion-common = { path="../arrow-datafusion/datafusion/common" }
datafusion-ffi = { path="../arrow-datafusion/datafusion/ffi" }
datafusion-proto = { path="../arrow-datafusion/datafusion/proto" }
datafusion-sql = { path="../arrow-datafusion/datafusion/sql" }
datafusion-physical-expr = { path="../arrow-datafusion/datafusion/physical-expr" }
datafusion-physical-plan = { path="../arrow-datafusion/datafusion/physical-plan" }
datafusion-functions = { path="../arrow-datafusion/datafusion/functions" }
datafusion-functions-aggregate = { path="../arrow-datafusion/datafusion/functions-aggregate" }
#datafusion = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-expr = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-common = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-ffi = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-proto = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-sql = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-physical-expr = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-physical-plan = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-functions = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }
#datafusion-functions-aggregate = { git="https://github.com/Nekit2217/arrow-datafusion", branch="bm-main" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"

# "stdlib"
bytes = { version = "1" }
chrono = { version = ">0.4.34", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
urlencoding = "2.1.3"
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }

